# Nexus

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_VISION.md  Dockerfile  Dockerfile.test  NEXUS_GAP_EVALUATION.md  Paradigm_GSPL_Technical_Analysis.md  Planning.txt  README.md  docker-compose.yml  gateway_config.yaml  opencode.json  pyproject.toml
Nexus/: .env.example  .pre-commit-config.yaml  Dockerfile  LICENSE  NEXUS_DEEP_BLUEPRINT.md  README.md  SECURITY.md  SYSTEM_README.md  WORKSTATION.bat  launch_agent.bat
Nexus/agent-system/: .aider.chat.history.md  .aider.conf.yml  CLAUDE.md  GAP_ANALYSIS.md  GOOSE_USER_GUIDE.md  NEXUS_ULTIMATE.bat  README.md  SETUP_AIDER_GOOSE.md  VISION_SYSTEM_PROMPT.md  WORKSTATION_ULTIMATE.bat  aider.bat  aider_antihall.yaml  aider_config.yaml  aider_deepseek.yaml  aider_minimax.yaml  aider_ultimate.yaml  computer_use.py  fix_evolutionary.py  goose-init.yaml  mcp_agent_server.py  memory.json  memory_system.py  model_registry.py  nexus_autopilot.py  nexus_vision.bat  run.py  run_full.py  test_aider.toml  test_aider.yaml  unified_cli.py  vision_auto_switch.py  vision_integration.py
Nexus/fine-tuning/: requirements.txt
Nexus/scripts/: backup.py  chaos.py  setup_gateway.sh  verify.sh
Nexus/tests/: __init__.py
agent-system/: .aider.input.history  .env.global  AGENTS.md  COMPLETE_SYSTEM.md  GOOSE_INTEGRATION.md  LAUNCHER.bat  NEXUS.bat  NEXUS_Config.yaml  PROFOUND.md  agent.bat  aider_multiprovider.yaml  aider_qwen.yaml  autonomous_ai.py  config_goose.yaml  continuous_vision.py  evolutionary_tools.py  evolutionary_tools_backup.py  fundamental_tools.py  fused_tools.py  init_project.py  model_switcher.py  nexus_autonomous.py  nexus_suite.py  requirements_free.txt  run_advanced.py  run_aider_deepseek.bat  run_aider_qwen.bat  test_aider_simple.yaml  ultimate_agent.py  ultimate_aider.yaml  unified_cli.py  universal_agent_config.yaml  vision_analyzer.py  vision_intercept.py  vision_preprocessor.py  vision_tool.py
agent-system/core/: brain.py  vector_memory.py
agent-system/mcp_servers/: config.json  github.py
agent-system/nexus_dashboard/: README.md  index.html  server.py
agent-system/tools/: aider_wrapper.py  (+1 more)
docs/: DEVELOPER.md  GATEWAY.md
fine-tuning/: README.md  convert_to_gguf.py  train_lora.py
scripts/: install.sh  uninstall.sh  verify.bat  verify.py
tests/: conftest.py
(+1297 files in other folders)
